--- a/ParrotServer_springboot/src/main/resources/application.properties
+++ b/ParrotServer_springboot/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=ParrotServer_springboot
+
+# Database Configuration
+# These can be overridden by environment variables in Docker
+spring.datasource.url=jdbc:postgresql://localhost:5432/parrot_social_db
+spring.datasource.username=parrot_db_user
+spring.datasource.password=parrot_db_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
