--- a/ParrotServer_springboot/Dockerfile
+++ b/ParrotServer_springboot/Dockerfile
@@ -1,13 +1,31 @@
-# Use Eclipse Temurin JDK 25 for building and running
+# Stage 1: Build stage
+FROM eclipse-temurin:25-jdk AS build
+
+# Set working directory
+WORKDIR /build
+
+# Copy Maven wrapper and pom.xml first (for better layer caching)
+COPY mvnw .
+COPY .mvn .mvn
+COPY pom.xml .
+
+# Download dependencies (this layer will be cached if pom.xml doesn't change)
+RUN ./mvnw dependency:go-offline -B
+
+# Copy source code
+COPY src src
+
+# Build the application (skip tests to avoid DB connection issues during build)
+RUN ./mvnw clean package -DskipTests -B
+
+# Stage 2: Runtime stage
 FROM eclipse-temurin:25-jdk
 
 # Set working directory
 WORKDIR /app
 
-# Copy the JAR file (you'll need to build your Spring Boot app first)
-# Place your built JAR file in the ProjectBackend directory as app.jar
-#COPY app.jar /app/app.jar
-COPY /target/ParrotServer-0.0.1-SNAPSHOT.jar /app/app.jar
+# Copy the built JAR from build stage
+COPY --from=build /build/target/*.jar /app/app.jar
 
 # Expose Spring Boot default port
 EXPOSE 8080
