--- a/ParrotServer_springboot/pom.xml
+++ b/ParrotServer_springboot/pom.xml
@@ -120,6 +120,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- OpenAPI swagger-->
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
