Entity definitions and relations (initial liquibase config .. needs adding the migrations)

--- a/ParrotServer_springboot/src/main/resources/application.properties
+++ b/ParrotServer_springboot/src/main/resources/application.properties
@@ -9,9 +9,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.drop-first=false
 
 # Connection Pool Settings
 spring.datasource.hikari.maximum-pool-size=10
