--- a/ParrotServer_springboot/pom.xml
+++ b/ParrotServer_springboot/pom.xml
@@ -128,6 +128,13 @@
             <version>3.0.1</version>
         </dependency>
 
+        <!-- Liquibase -->
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
